[metadata]
name = django-flex-menu
version = attr: flex_menu.__version__
url = https://github.com/saman-zand-h/django-flex-menu
author = Saman Zand Haghighi
author_email = samanzandh@gmail.com
description = Flexible, database-side menus.
license = MIT License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    Django >= 3.2
    django-mptt >= 0.14.0
    django-waffle >= 4.0.0