[metadata]
name = cocalc-python
version = attr: cocalc.__version__
url = https://github.com/saman-zand-h/cocalc-python
author = Saman Zand Haghighi
author_email = samanzandh@gmail.com
description = A client for interacting with CoCalc-API.
license = MIT License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    requests >= 2.25.0